--- a/templates/cases/base.html
+++ b/templates/cases/base.html
@@ -57,7 +57,7 @@
                      </a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
-                        <li><a href="cases">Cases</a></li>
+                        <li><a href= "{% url 'index' %}">Cases</a></li>
                         <li><a href="https://www.yakimaherald.com/thevanished">Stories</a></li>
                         <li><a href="#">Resources</a></li>
                     </ul>
@@ -66,8 +66,8 @@
         </nav>
 
         <ul id="mobile-demo" class="sidenav">
-            <li><img  class="responsive-img" src="https://www.yakimaherald.com/tncms/media/thevanished_eng1/" /></li>
-            <li><a class="waves-effect" href="cases">Cases</a></li>
+            <li><img class="responsive-img" src="https://www.yakimaherald.com/tncms/media/thevanished_eng1/" /></li>
+            <li><a class="waves-effect" href="{% url 'index' %}">Cases</a></li>
             <li><a class="waves-effect" href="https://www.yakimaherald.com/thevanished">Stories</a></li>
             <li><a class="waves-effect" href="#">Resources</a></li>
         </ul>
@@ -75,62 +75,16 @@
 
     </div>
 
-    <div class="grey lighten-4">
-
-        <div class="row hero-unit">
-            <div class="col s12 m8 offset-m2">
-                <p><strong>Dozens of women have vanished in and around the Yakama reservation.</strong>  Sometimes, they just disappear.  Sometimes, they're found dead months or years latter. Rarely is anyone held to account.</p>
-
-            </div>
-        </div>
-    </div>
-
-    <div id="vanished-main-menu">
-
-        <div class="row">
-             <a href="cases">
-                <div class="col m2 offset-m2 s4">
-                 `  <img class="responsive-img" src="https://www.yakimaherald.com/tncms/media/mmiw_poster_button/">
-                </div>
-                 <div class="col m6 s8">
-                        <h3>Cases</h3>
-                        <p>Dozens of cases of missing and murdered indigenous women in and around the Yakama reservation.  Many are decades old.  Most are still unsolved.</p>
-                </div>
-             </a>
-        </div>
-
-        <div class="row">
-            <a href="https://www.yakimaherald.com/thevanished">
-                <div class="col m2 offset-m2 s4">
-                    <img class="responsive-img" src="https://www.yakimaherald.com/tncms/media/stolen_sisters_button">
-                </div>
-                <div class="col m6 s8">
-                    <h3>Stories</h3>
-                   <p>Every one of the stories we've done cataloging the epidimic of violence against native women, and the efforts to end it.</p>
-                </div>
-            </a>
-        </div>
-
-        <div class="row">
-            <a href="#">
-                <div class="col m2 offset-m2 s4">
-                    <img  class="responsive-img" src="https://www.yakimaherald.com/tncms/media/mmiw_hand_button_redux/" class="mmiw-button">
-                </div>
-                <div class="col m6 s8">
-                    <h3>Resources</h3>
-                    <p>What you should know.  What you can do.  How you can reach out.  And what to do if this epidimic touches your family.</p>
-                </div>
-            </a>
-        </div>
-
-    </div>
+    {% block main_content %}{% endblock %}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-        var elems = document.querySelectorAll('.sidenav');
-        var instances = M.Sidenav.init(elems);
-        });
-    </script>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.sidenav');
+    var instances = M.Sidenav.init(elems);
+
+  });
+
+</script>
 </body>
 </html>
