--- a/templates/cases/detail.html
+++ b/templates/cases/detail.html
@@ -1,64 +1,6 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <!-- Compiled and minified CSS -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-        <link rel="stylesheet" href="https://use.typekit.net/lpb6ggv.css">
-        <style>
-            #nav-content-wrapper {max-width: 1396px; margin: 0 auto;}
-            .brand-logo {max-width: 200px;}
-            .nav-wrapper {
-                background: linear-gradient(#fff 0%, #b71c1c 10%, #9b0303 45%, #9b0303 47%, #b71c1c 90%)
+{% extends "base.html" %}
 
-            }
-
-
-            p, h2, h2, h3, h4, h5, h6 {font-family: mencken-std-text, sans-serif;}
-            body {font-size: 16px; line-height: 22px;}
-            .block-content-discovery article {
-                padding: 15px;
-                border: 1px solid rgba(0,0,0,.1);
-                border-width: 0 0 1px 0;
-            }
-
-            .asset-body .asset-content {max-width: 750px; margin: 0 auto;}
-
-            .asset-body .asset-content h3 {font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;}
-
-            .asset-body p a {
-                color: #428bca;
-                }
-
-            .asset-masthead .asset-header h1 {font-weight: 700;}
-            h1.victim_name {font-weight: 600; margin-top: 10px; font-size: 2rem;}
-            .missing p {text-align: center; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif}
-            h5 {font-size:1.2rem; font-weight: 600;}
-        </style>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-    <div class="navbar-fixed">
-        <nav>
-            <div class="nav-wrapper">
-                <div id="nav-content-wrapper">
-                <a href="#" class="brand-logo"><img class="responsive-img" src="https://www.yakimaherald.com/tncms/media/vanished_logo_white"/></a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="#">Cases</a></li>
-                    <li><a href="#">Stories</a></li>
-                    <li><a href="#">Resources</a></li>
-                </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-
+{% block main_content %}
         <div class="container">
             <div class="row">
                 <div class="col s12 col l8 offset-l2">
@@ -146,7 +88,7 @@
 
     <script>
 
-    let bounds = [[-124.438, 45.375][-116.563, 49.24]]
+    let bounds = [[-124.438, 45.375][-116.563, 49.24]];
     let map;
     map = new mapboxgl.Map({
         container: 'map',
@@ -156,22 +98,24 @@
 
     });
 
-    map.on('load', function(){
+    map.on('load', function () {
         {% for marker in markers %}
             let popup{{ forloop.counter }} = new mapboxgl.Popup({
                 closeButton: false,
-                closeOnClick: false})
-                .setLngLat([  {{ marker.lon }}   ,  {{ marker.lat }}  ])
-                .setHTML( "{{ marker.loc_description }}" )
+                closeOnClick: false
+            })
+                .setLngLat([{{ marker.lon }}, {{ marker.lat }}])
+                .setHTML("{{ marker.loc_description }}")
 
             let marker{{ forloop.counter }} = new mapboxgl.Marker()
-                .setLngLat([  {{ marker.lon }}   ,  {{ marker.lat }}  ])
+                .setLngLat([{{ marker.lon }}, {{ marker.lat }}])
                 .addTo(map);
         {% endfor %}
 
-    map.ScrollZoom.disable();
-    map.addControl(new mapboxgl.NavigationControl());
-    });
+        map.ScrollZoom.disable();
+        map.addControl(new mapboxgl.NavigationControl());
+    })
 
 </script>
 {% endif %}
+{% endblock %}
