--- a/templates/vanished/base.html
+++ b/templates/vanished/base.html
@@ -69,7 +69,8 @@
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
                         <li><a href= "{% url 'index' %}">Cases</a></li>
                         <li><a href="https://www.yakimaherald.com/thevanished">Stories</a></li>
-                        <li><a href="#">Resources</a></li>
+			<li><a href="{% url 'resources' %}">Resources</a></li>
+			<li><a href="{% url 'about' %}">About</a></li>
                     </ul>
                 </div>
             </div>
@@ -79,7 +80,8 @@
             <li><img class="responsive-img" src="https://www.yakimaherald.com/tncms/media/thevanished_eng1/" /></li>
             <li><a class="waves-effect" href="{% url 'index' %}">Cases</a></li>
             <li><a class="waves-effect" href="https://www.yakimaherald.com/thevanished">Stories</a></li>
-            <li><a class="waves-effect" href="#">Resources</a></li>
+	    <li><a class="waves-effect" href="{% url 'resources' %}">Resources</a></li>
+	    <li><a class="waves-effect" href="{% url 'about' %}">About</a></li>
         </ul>
 
 
